--- a/templates/index.html
+++ b/templates/index.html
@@ -123,13 +123,13 @@
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
-                    <a href="https://www.youtube.com/channel/UCqrILQNl5Ed9Dz6CGMyvMTQ" target="_blank" class="portfolio-link" data-toggle="modal">
+                    <a href="https://www.youtube.com/watch?v=OTp8W251aiQ" target="_blank" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="/static/img/portfolio/youtubecp.png" class="img-responsive" alt="Circus tent">
+                        <img src="https://ichef.bbci.co.uk/images/ic/336xn/p02307y2.jpg" class="img-responsive" alt="Circus tent">
                     </a>
                 </div>      
             </div>
