--- a/templates/index.html
+++ b/templates/index.html
@@ -113,13 +113,13 @@
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
-                    <a href="https://www.cleverprogrammer.com/" target="_blank" class="portfolio-link" data-toggle="modal">
+                    <a href="https://www.youtube.com/watch?v=v_cpPMjE0vU" target="_blank" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="/static/img/portfolio/cleverprogrammer.png" class="img-responsive" alt="Slice of cake">
+                        <img src="https://www.telegraph.co.uk/content/dam/news/2016/08/23/106598324PandawaveNEWS_trans_NvBQzQNjv4Bqeo_i_u9APj8RuoebjoAHt0k9u7HhRJvuo-ZLenGRumA.jpg?imwidth=450" class="img-responsive" alt="Slice of cake">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
