--- a/templates/index.html
+++ b/templates/index.html
@@ -103,13 +103,13 @@
             </div>
             <div class="row">
                 <div class="col-sm-4 portfolio-item">
-                    <a href="https://www.chesstastic.com/" target="_blank" class="portfolio-link" data-toggle="modal">
+                    <a href="https://www.youtube.com/watch?v=oI3ADcDH0Uc" target="_blank" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="/static/img/portfolio/chesstastic.jpeg" target="_blank" class="img-responsive" alt="Chesstastic">
+                        <img src="https://thumbs-prod.si-cdn.com/3clrGKL7TfGo3TgGCVB2X5ofxts=/800x600/filters:no_upscale():focal(1805x927:1806x928)/https://public-media.si-cdn.com/filer/36/68/3668eb74-68c6-4357-9526-7c5614206782/koala.jpg" target="_blank" class="img-responsive" alt="Chesstastic">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
